2022-11-21  Robby Stephenson  <robby@periapsis.org>

	* Use transparent background in initial entry view (Bug 461777).

2022-11-16  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.5.

2022-11-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed loading for large reports (Bug 461391).

2022-05-09  Robby Stephenson  <robby@periapsis.org>

	* Added capability to save empty collection as new template (Bug 450043).

2022-04-27  Robby Stephenson  <robby@periapsis.org>

	* Updated ESRB rating for TheGamesDB data source.
	* Fixed image path for exporting GCstar files (Bug 453075).

2022-04-08  Robby Stephenson  <robby@periapsis.org>

	* Updated CSV importer to remember column and row delimiter.

2022-03-26  Robby Stephenson  <robby@periapsis.org>

	* Added screenshot field for IGDB source.

2022-03-23  Robby Stephenson  <robby@periapsis.org>

	* Added screenshot field for MobyGames source.

2022-03-22  Robby Stephenson  <robby@periapsis.org>

	* Added screenshot field for TheGamesDB source.

2022-03-15  Robby Stephenson  <robby@periapsis.org>

	* Added option for using regular expressions in quick filter (Bug 450517).

2022-03-13  Robby Stephenson  <robby@periapsis.org>

	* Added data source for arcade-history.com (Bug 450058).

2022-03-10  Robby Stephenson  <robby@periapsis.org>

	* Added Data Crow importer (Bug 451138).

2022-02-21  Robby Stephenson  <robby@periapsis.org>

	* Updated IMDb data source to include composer (Bug 450618).

2022-02-16  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.4.

2022-02-14  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with taskbar icon on wayland (Bug 450180).
	* Updated Discogs keyword search to limit results to releases.

2022-02-13  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with saving and viewing surrogate code points (Bug 449244).

2022-02-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with fetchdialog layout preventing clicking (Bug 449636).
